make a basic http client